# email-infra

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: mta-sts.yml  pipeline.yml
.kiro/settings/: mcp.json
.kiro/steering/: behavior.md
email_infra/: __init__.py  handler.py
mta-sts/.well-known/: mta-sts.txt
terraform/: dmarc-collection.tf  email-dns.tf  email-health-check.tf  email-routing.tf  email-security.tf  grafana-alerts.tf  grafana-dashboard.tf  main.tf  monitoring.tf  mta-sts.tf  outputs.tf  providers.tf  remote-state.tf  secrets.tf  secrets.yaml.encrypted  ses-domains.tf  ses-identities.tf  smtp-users.tf  terraform.tfvars  variables.tf
tests/: __init__.py  test_handler.py
